data/derived/sp14/progs/unify/prog4200.ml.out
Characters 42-58:
  [5]@ digitsOfInt n/10
       ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
